# NABDALGHARBDESKTOP

./: .gitignore  ADVANCE.html  ALL_MODULES_PRINT_PDF_FINAL_README.txt  AUTO_UPDATE_CHANGES.txt  AUTO_UPDATE_SETUP_README.txt  BUILD_WINDOWS_FINAL.bat  COMMERCIAL_INVOICE.html  CUSTOMER_LEDGER_PRINT_FIX_README.txt  DESKTOP_AUTO_PRINT_DIALOG_v112_README.txt  DESKTOP_PDF_FIX_README.txt  DESKTOP_PRINT_DIALOG_v113_FIXED_README.txt  DESKTOP_v144_CUSTOMER_LEDGER_COMPANY_MOBILE_README.txt  DESKTOP_v145_TAX_INVOICE_BOTTOM_PRINT_README.txt  DESKTOP_v148_PRINT_ERROR_REMOVED_README.txt  DESKTOP_v149_ALL_MODULES_EXACT_PDF_PRINT_README.txt  DESKTOP_v150_EXACT_PDF_PRINT_AND_SALES_RETURN_EDIT_README.txt  DESKTOP_v155_DISCOUNT_REQUEST_TOGGLE_README.txt  DESKTOP_v156_FOUR_MODULES_README.txt  DESKTOP_v157_PDF_PRINT_FIX_README.txt  DESKTOP_v158_EXACT_PDF_LAYOUT_PRINT_README.txt  DESKTOP_v159_COMMERCIAL_INVOICE_PDF_PRINT_FIX_README.txt  DESKTOP_v160_COMMERCIAL_INVOICE_PDF_ONLY_FIX_README.txt  DESKTOP_v161_OFFLINE_PDF_LIBRARIES_FIX_README.txt  EMPLOYEES.html  FINAL_RELEASE_PREPARATION_v172_README.txt  FINAL_RELEASE_STATUS.txt  FINAL_STABILIZATION_v171_README.txt  FINAL_TEST_RESULTS.txt  FINAL_TEST_RESULTS_v173.txt  FINAL_TEST_RESULTS_v174.txt  FINAL_TEST_RESULTS_v175.txt  FINAL_TEST_RESULTS_v176.txt  FIX_USERS_EMPLOYEES.sql  KHUROOJ.html  KHUROOJ_PHASE1_README.txt  LOGIN_FIX_README.txt  MINI_STORE_PHASE6_README.txt  MINI_STORE_PRICE_PERMISSIONS_v168_README.txt  MINI_STORE_SALES_PHASE7_README.txt  PRINT_PDF_FINAL_FIX_README.txt  (+21 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+3 files in other folders)
