[package]
name = "nabd-al-gharb"
version = "1.0.0"
description = "Nabd Al-Gharb — Billing, Ledger & Inventory"
authors = ["Nabd Al-Gharb Trading Est."]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"

[[bin]]
name = "nabd-al-gharb"
path = "src/main.rs"
